# first-planner

./: .gitignore  README.md
first-planner/: Cargo.toml  notes.md
first-planner/example/: workouts.csv
first-planner/first-client/: Cargo.toml  Makefile.toml  index.html
first-planner/first-client/src/: lib.rs
first-planner/first-server/: Cargo.toml
first-planner/first-server/migrations/2022-01-25-090023_create_workout/: up.sql
first-planner/first-server/src/: db.rs  main.rs
first-planner/first-server/src/db/: models.rs  schema.rs
first-planner/first-shared/: Cargo.toml
first-planner/first-shared/src/: lib.rs
first-planner/src/: lib.rs  workout.rs
