[package]
name = "first-server"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.0"
actix-files = "0.1.1"
actix-multipart = "0.1.2"
tokio-timer = "0.2.11"
chrono = "0.4.19"
clap = { version = "3.0.7", features = ["derive"] }
csv = "1.1.6"
serde = {version = "1.0.133", features = ["derive"] }
rusqlite = "0.26.3"
serde_rusqlite = "0.29.0"
serde_json = "1.0"
diesel = { version = "^1.1.0", features = ["sqlite"] }
dotenv = "0.9.0"
uuid = { version = "0.7", features = ["serde", "v4"]}

first-shared = { path = "../first-shared" }