[package]
name = "first-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0.7", features = ["derive"] }
csv = "1.1.6"
serde = {version = "1.0.133", features = ["derive"] }
rusqlite = "0.26.3"
serde_rusqlite = "0.29.0"
serde_json = "1.0"